# spartan-framework

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: algorithms.md  api_reference.md  examples.md  getting_started.md  index.md
examples/: attack_simulation.py  basic_usage.py  custom_defense.py
src/spartan/: __init__.py  cli.py  config.py  core.py  evaluate.py
src/spartan/attacks/: __init__.py  base.py  mvna.py  nlba.py  smva.py
src/spartan/benchmarks/: __init__.py  datasets.py  runner.py
src/spartan/models/: __init__.py  base.py  mock.py
src/spartan/mplq/: __init__.py  analyzer.py  mcts_leakage.py  prm_leakage.py  vote_leakage.py
src/spartan/raas/: __init__.py  mcts_defense.py  prm_defense.py  sanitizer.py  vote_defense.py
src/spartan/rppo/: __init__.py  bandit.py  optimizer.py  pareto.py
src/spartan/utils/: __init__.py  distributions.py  metrics.py  noise.py
tests/: __init__.py  conftest.py  test_100_coverage.py  test_100_coverage_all.py  test_100_percent.py  test_attacks.py  test_benchmarks.py  test_cli.py  test_complete_coverage.py  test_coverage_additional.py  test_evaluate.py  test_final_100.py  test_final_coverage.py  test_full_coverage.py  test_integration.py  test_mplq.py  test_raas.py  test_remaining_coverage.py  test_rppo.py  test_utils.py
